/**
 * @(#) Cliente.java
 */

public class Cliente
{
	private String rup;
	
	private String nombres;
	
	private String apellidos;
	
	private date fechaNacimiento;
	
	private Reservacion reservaciones;
	
	private TipoCliente tipoCliente;
	
	
}
