/**
 * @(#) Reservacion.java
 */

public class Reservacion
{
	private date fecha;
	
	private date fechaInicio;
	
	private int numeroDias;
	
	private int numeroNoche;
	
	private int porcentajeDescuento;
	
	private double total;
	
	private Habitacion habitaciones;
	
	private Cliente cliente;
	
	
}
