/**
 * @(#) TipoHabitacion.java
 */

public class TipoHabitacion
{
	private String descripcion;
	
	private Habitacion habitaciones;
	
	private String categoriaHabitacion;
	
	
}
